syntax = "proto3";

package request_models;


message Request {
    string query = 1;
}

