syntax = "proto3";

package profile;

// requests
import "request-models/requests.proto";
// responses
import "response-models/responses.proto";


service MyService {
  rpc PrivateResource (request_models.Request) returns (response_models.Response) {}
}
